#
# CMakeLists.txt for IOInterfacePKG
#

add_subdirectory( Output )
set( IOInterface_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_CmdParse.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_NetlistImportTool.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_DistToolFactory.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_DistToolDefault.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_DistToolDevBalanced.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_DistToolFlatRoundRobin.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_DistToolBase.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_ExtOutWrapper.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_MORAnalysisTool.C 
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputMgr.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_LoadManager.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputResponse.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputMacroResults.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputMOR.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputROM.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputResults.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_PrintDeviceCount.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_InitialConditions.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterExternal.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterLocal.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterFrequencyCSV.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterFrequencyPrn.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterFrequencyProbe.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterFrequencyRaw.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterFrequencyRawASCII.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterFrequencyTecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHBCSV.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHBPrn.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHBTecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHDF5.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHomotopy.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHomotopyCSV.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHomotopyPrn.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHomotopyProbe.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHomotopyTecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterMPDEPrn.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterMPDETecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterOverrideRaw.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterOverrideRawASCII.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterNoisePrn.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterNoiseCSV.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterNoiseTecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterSensitivityPrn.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterSensitivityCSV.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterSensitivityTecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterSensitivityDakota.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterTimeCSV.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterTimePrn.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterTimeProbe.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterTimeRaw.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterTimeRawASCII.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterTimeTecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_Probe.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_Tecplot.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_Outputter.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterAC.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterDC.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterHB.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterMPDE.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterRawOverride.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterNoise.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterSensitivity.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OutputterTransient.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_RestartMgr.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_SpiceSeparatedFieldTool.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_CircuitMetadata.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_CircuitBlock.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_CircuitContext.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_DeviceBlock.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OptionBlock.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_ParameterBlock.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_Report.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_FunctionBlock.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_RestartNode.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_Op.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_OpBuilders.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_ActiveOutput.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_mmio.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_PkgOptionsMgr.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_FourierMgr.C
	${CMAKE_CURRENT_SOURCE_DIR}/N_IO_ParsingHelpers.C
	
	${OutputInterface_SOURCES}
)
add_to_xyce_library( NAME IOInterface
	FILES ${IOInterface_SOURCES}
)

# Add the headers we want to install.
set( IOInterface_Headers
	N_IO_CmdParse.h
	N_IO_ExtOutInterface.h
	N_IO_HangingResistor.h
	N_IO_OutputTypes.h
	N_IO_fwd.h
)
install( FILES ${IOInterface_Headers}
	DESTINATION include
)


