
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libLoaderServices.la

libLoaderServices_la_SOURCES = \
  N_LOA_NonlinearEquationLoader.C \
  N_LOA_CktLoader.C \
  N_LOA_HBLoader.C \
  N_LOA_ESLoader.C \
  N_LOA_Loader.C \
  N_LOA_NonlinearEquationLoader.h \
  N_LOA_CktLoader.h \
  N_LOA_HBLoader.h \
  N_LOA_ESLoader.h \
  N_LOA_Loader.h 

