
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libMPDE.la

libMPDE_la_SOURCES = \
  N_MPDE_Manager.C \
  N_MPDE_Builder.C \
  N_MPDE_Loader.C \
  N_MPDE_SawtoothLoader.C \
  N_MPDE_Discretization.C \
  N_MPDE_WarpedPhaseCondition.C \
  N_MPDE_Manager.h \
  N_MPDE_Builder.h \
  N_MPDE_Loader.h \
  N_MPDE_SawtoothLoader.h \
  N_MPDE_Discretization.h \
  N_MPDE_WarpedPhaseCondition.h \
  N_MPDE_State.h 
 
