
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libNonlinearSolver.la

libNonlinearSolver_la_SOURCES = \
  N_NLS_Manager.C \
  N_NLS_NonLinearSolver.C \
  N_NLS_DampedNewton.C \
  N_NLS_TwoLevelNewton.C \
  N_NLS_Sensitivity.C \
  N_NLS_SensitivityResiduals.C \
  N_NLS_ConductanceExtractor.C \
  N_NLS_NLParams.C \
  N_NLS_ParamMgr.C \
  N_NLS_NOX.C \
  N_NLS_NOX_Vector.C \
  N_NLS_NOX_Group.C \
  N_NLS_NOX_Interface.C \
  N_NLS_NOX_SharedSystem.C \
  N_NLS_NOX_ParameterSet.C \
  N_NLS_NOX_XyceTests.C \
  N_NLS_NOX_PseudoTransientTest.C \
  N_NLS_NOX_PseudoTransientSolver.C \
  N_NLS_LOCA_Group.C \
  N_NLS_NOX_AugmentLinSys_PseudoTransient.C \
  N_NLS_NOX_AugmentLinSys_GStepping.C \
  N_NLS_NOX_AugmentLinSys_IC.C \
  N_NLS_NOX_AugmentLinSys_IC_Gmin.C \
  N_NLS_ReturnCodes.C \
  N_NLS_DampedNewton.h \
  N_NLS_TwoLevelNewton.h \
  N_NLS_TwoLevelEnum.h \
  N_NLS_TwoLevelPrintJac.h \
  N_NLS_Sensitivity.h \
  N_NLS_SensitivityResiduals.h \
  N_NLS_ObjectiveFunctions.h \
  N_NLS_ConductanceExtractor.h \
  N_NLS_Manager.h \
  N_NLS_NLParams.h \
  N_NLS_ParamMgr.h \
  N_NLS_ReturnCodes.h \
  N_NLS_NonLinearSolver.h \
  N_NLS_NonLinInfo.h \
  N_NLS_NOX.h \
  N_NLS_NOX_Vector.h \
  N_NLS_NOX_Group.h \
  N_NLS_NOX_Interface.h \
  N_NLS_NOX_SharedSystem.h \
  N_NLS_NOX_ParameterSet.h \
  N_NLS_NOX_XyceTests.h \
  N_NLS_NOX_PseudoTransientTest.h \
  N_NLS_NOX_PseudoTransientSolver.h \
  N_NLS_LOCA_Group.h \
  N_NLS_NOX_AugmentLinSys.h \
  N_NLS_NOX_AugmentLinSys_PseudoTransient.h \
  N_NLS_NOX_AugmentLinSys_GStepping.h \
  N_NLS_NOX_AugmentLinSys_IC.h \
  N_NLS_NOX_AugmentLinSys_IC_Gmin.h 
