
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libParallelDist.la

libParallelDist_la_SOURCES = \
  N_PDS_GlobalAccessor.C \
  N_PDS_MPI.C \
  N_PDS_Manager.C \
  N_PDS_ParMap.C \
  N_PDS_ParallelMachine.C \
  N_PDS_EpetraMPIComm.C \
  N_PDS_EpetraSerialComm.C \
  N_PDS_EpetraHelpers.C \
  N_PDS_Node.C \
  N_PDS_fwd.h \
  N_PDS_ParallelMachine.h \
  N_PDS_MPI.h \
  N_PDS_Comm.h \
  N_PDS_Directory.h \
  N_PDS_GlobalAccessor.h \
  N_PDS_Manager.h \
  N_PDS_Migrate.h \
  N_PDS_ParMap.h \
  N_PDS_EpetraMPIComm.h \
  N_PDS_EpetraSerialComm.h \
  N_PDS_EpetraHelpers.h \
  N_PDS_PackTraits.h \
  N_PDS_Node.h
 
