
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libTimeIntegration.la

libTimeIntegration_la_SOURCES = \
  N_TIA_DataStore.C \
  N_TIA_TIAParams.C \
  N_TIA_StepErrorControl.C \
  N_TIA_TimeIntegrationMethods.C \
  N_TIA_RegisterTimeIntegrationMethods.C \
  N_TIA_WorkingIntegrationMethod.C \
  N_TIA_Gear12.C \
  N_TIA_OneStep.C \
  N_TIA_NoTimeIntegration.C \
  N_TIA_TwoLevelError.C \
  N_TIA_fwd.h \
  N_TIA_Gear12.h \
  N_TIA_OneStep.h \
  N_TIA_DataStore.h \
  N_TIA_Dummy.h \
  N_TIA_NoTimeIntegration.h \
  N_TIA_StepErrorControl.h \
  N_TIA_TIAParams.h \
  N_TIA_TimeIntegrationMethods.h \
  N_TIA_WorkingIntegrationMethod.h \
  N_TIA_TwoLevelError.h
