
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libTopoManager.la

libTopoManager_la_SOURCES= \
  N_TOP_CktGraph.C \
  N_TOP_CktGraphBasic.C \
  N_TOP_CktNode.C \
  N_TOP_CktNode_Dev.C \
  N_TOP_CktNode_V.C \
  N_TOP_Directory.C \
  N_TOP_Node.C \
  N_TOP_NodeDevBlock.C \
  N_TOP_ParNode.C \
  N_TOP_ParLSUtil.C \
  N_TOP_SerialLSUtil.C \
  N_TOP_LSUtilFactory.C \
  N_TOP_Topology.C \
  N_TOP_Indexor.C \
  N_TOP_fwd.h \
  N_TOP_CktGraph.h \
  N_TOP_CktGraphBasic.h \
  N_TOP_CktNode.h \
  N_TOP_CktNode_Dev.h \
  N_TOP_CktNode_V.h \
  N_TOP_Directory.h \
  N_TOP_Node.h \
  N_TOP_NodeDevBlock.h \
  N_TOP_ParNode.h \
  N_TOP_ParLSUtil.h \
  N_TOP_SerialLSUtil.h \
  N_TOP_LSUtilFactory.h \
  N_TOP_Topology.h \
  N_TOP_Indexor.h

